--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+@import "react-alice-carousel/lib/alice-carousel.css";
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
