--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,13 @@
     min-height: 100vh;
     background-color: #39445a;
     color: white;
-    padding-top: 130px;
-    padding-bottom: 70px;
+    padding-top: 55px;
+    padding-bottom: 20px;
   }
   
   @media (max-width: 700px) {
     .app {
-      padding-top: 70px;
+      padding-top: 45px;
     }
   }
   
@@ -21,14 +21,15 @@
     display: flex;
     justify-content: center;
     font-family: "Helvetica Neue", sans-serif;
-    font-size: 2vw;
+    font-size: 3vw;
+    font-weight: bold;
     padding: 8px;
-    border-radius: 50px;
+    /* border-radius: 50px; */
     color: white;
   }
   
   @media (max-width: 1000px) {
     .pageTitle {
-      font-size: 6.4vw;
+      font-size: 5vw;
     }
   }
