--- a/src/Pages/Trending/Trending.css
+++ b/src/Pages/Trending/Trending.css
@@ -1,5 +1,7 @@
 .trending {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    padding-left: 40px;
+    padding-right: 40px;
   }
