--- a/src/components/SingleContent/SingleContent.css
+++ b/src/components/SingleContent/SingleContent.css
@@ -2,11 +2,12 @@
     display: flex;
     flex-direction: column;
     width: 200px;
+    height: 375px; 
     padding: 5px;
     margin: 5px 0;
     background-color: #282c34;
     border-radius: 10px;
-    position: relative;
+    /* position: relative; */
     font-family: "Montserrat", sans-serif;
   }
   
@@ -15,12 +16,12 @@
     color: black;
   }
   
-  @media (max-width: 550px) {
+  /* @media (max-width: 550px) {
     .media {
       width: 46%;
     }
   }
-  
+   */
   .poster {
     border-radius: 10px;
   }
@@ -38,4 +39,5 @@
     padding-bottom: 3px;
     padding: 0 2px;
     padding-bottom: 3px;
+    overflow: hidden;
   }
