--- a/src/components/SingleContent/SingleContent.css
+++ b/src/components/SingleContent/SingleContent.css
@@ -1,3 +1,4 @@
+
 .media {
     display: flex;
     flex-direction: column;
@@ -15,13 +16,13 @@
     background-color: white;
     color: black;
   }
-  
-  /* @media (max-width: 550px) {
+/*   
+  @media (max-width: 550px) {
     .media {
-      width: 46%;
+      width: 90%;
     }
-  }
-   */
+  } */
+  
   .poster {
     border-radius: 10px;
   }
@@ -29,15 +30,19 @@
   .title {
     width: 100%;
     text-align: center;
-    font-size: 17px;
-    padding: 8px 0;
+    font-size: 15px;
+    /* padding: 8px 0px; */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; 
+    -webkit-box-orient: vertical;
   }
   
   .subTitle {
     display: flex;
     justify-content: space-between;
-    padding-bottom: 3px;
     padding: 0 2px;
-    padding-bottom: 3px;
-    overflow: hidden;
   }
+
+  
